Fixed incorrect active tab height on mobile

--- a/projects/portal/src/app/component/result-tab/result-tab.component.scss
+++ b/projects/portal/src/app/component/result-tab/result-tab.component.scss
@@ -245,6 +245,7 @@ app-result-tab {
 
         .bundler.active {
             margin-top: 3px;
+            height: 100%;
         }
 
         .text-center {
